# OStimLovense

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
include/: AutoTOML.hpp
src/: Core.cpp  Core.h  Main.cpp  PCH.h  Settings.h
src/GameAPI/: GameSerializationInterface.h
src/GameLogic/: GameSerializationManager.cpp  GameSerializationManager.h
src/Lovense/: ActionType.h  CommandType.h  ErrorCode.h  Parameter.h  ParameterType.h  PatternType.h
src/OStim/Settings/: Setting.h  SettingExportImportListener.h  SettingExportImportScale.h  SettingInterface.h  SettingType.h
src/OStim/SexToys/: SexToy.h
src/Serialization/: ResetInfo.h
src/Settings/: BaseSetting.cpp  BaseSetting.h  BaseSettingParams.h  LovenseSettingGroup.cpp  LovenseSettingGroup.h  SettingTable.cpp  SettingTable.h  TextSetting.cpp  TextSetting.h
src/Toys/: LovenseToy.cpp  LovenseToy.h  SolacePro.cpp  SolacePro.h  ToyManager.cpp  ToyManager.h
src/Url/: Request.cpp  Request.h  RequestResult.h  RequestResultType.h
src/Util/: SerializationUtil.cpp  SerializationUtil.h  StringUtil.cpp  StringUtil.h
